feat: add modul 4 (Input dan GUI Sederhana) and update modul 3

--- a/Algoritma dan Pemrograman Komputer 1/Variabel dan Operator/Variabel dan Operator.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Variabel dan Operator/Variabel dan Operator.tex
@@ -36,10 +36,12 @@
 }
 
 % Info presentasi
-\title{Pengantar Algoritma dan Pemrograman}
+\title{Algoritma dan Pemrograman Komputer 1}
 \subtitle{Bab 3: Variabel dan Operator}
 \author{Nama Anda \\ NRP Anda}
 \institute{Departemen Matematika \\ Fakultas Sains dan Analitika Data \\ Institut Teknologi Sepuluh Nopember}
+\date{September 22, 2025}
+
 
 % Logo untuk title page
 \titlegraphic{%
@@ -157,7 +159,7 @@ String kecil = nama.toLowerCase();
 \end{frame}
 
 \begin{frame}[fragile]{Deklarasi dan Inisialisasi Variabel}
-  \begin{block}{Sintaks Dasar}
+  \begin{block}{Sintaks Dasar}  
     \texttt{tipeData namaVariabel = nilai;}
   \end{block}
   
@@ -282,11 +284,11 @@ System.out.println(++x); // Output: 7
         \textbf{Operator} & \textbf{Keterangan} \\
         \hline
         \& & AND \\
-        | & OR \\
+        \textbar & OR \\
         \^{} & XOR \\
         ! & NOT \\
         \&\& & AND (short circuit) \\
-        || & OR (short circuit) \\
+        \textbar\textbar & OR (short circuit) \\
         \hline
         \end{tabular}
       \end{block}
