--- a/Algoritma dan Pemrograman Komputer 1/Struktur Kontrol 1/Struktur Kontrol 1.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Struktur Kontrol 1/Struktur Kontrol 1.tex
@@ -47,6 +47,7 @@
 \title{Algoritma dan Pemrograman Komputer 1}
 \subtitle{Bab 5: Struktur Kontrol I}
 \author{Aslam Pandu Tasminto -- 5002241025 \\ M. Ma'ruf Qomaruddin Kafi -- 5002241095}
+\date{October 6, 2025}
 \institute{Departemen Matematika \\ Fakultas Sains dan Analitika Data \\ Institut Teknologi Sepuluh Nopember}
 
 % Logo untuk title page
@@ -344,7 +345,7 @@ public class KonversiNilai {
     \rowcolor{lightgray}
     0 - 40 & E & Kurang Sekali \\
     \end{tabular}
-    \caption{Tabel konversi nilai berdasarkan Peraturan Akademik 2018}
+    \caption{Tabel konversi nilai berdasarkan Peraturan Akademik ITS}
   \end{table}
 \end{frame}
 
