feat: add modul 7 (Perulangan)

--- a/Algoritma dan Pemrograman Komputer 1/Input dan GUI Sederhana/Input dan GUI Sederhana.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Input dan GUI Sederhana/Input dan GUI Sederhana.tex
@@ -529,7 +529,7 @@ public class InputNilaiMahasiswa {
 
 % Section 9: Kesimpulan
 \section{Kesimpulan}
-\begin{frame}{Kesimpulan}
+\begin{frame}{Kesimpulan}https://github.com/mmarufqk/AsistenLaboratorium
   \begin{alertblock}{Inti Bab 4}
     \begin{itemize}
       \item \textbf{Scanner} dan \textbf{BufferedReader} adalah dua cara utama untuk membaca input dari konsol di Java.
