refactor: reorganize folder structure for better readability

--- a/Algoritma dan Pemrograman Komputer 1/Perulangan/Perulangan.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Perulangan/Perulangan.tex
@@ -53,11 +53,11 @@
 
 % Logo untuk title page
 \titlegraphic{%
-  \includegraphics[height=0.9cm]{../assets/logoprovikom.jpg}%
+  \includegraphics[height=0.9cm]{Perulangan/logoprovikom.jpg}%
   \hspace{0.5em}%
-  \includegraphics[height=0.9cm]{../assets/logomatematika.png}%
+  \includegraphics[height=0.9cm]{Perulangan/logomatematika.png}%
   \hspace{0.5em}%
-  \includegraphics[height=1cm]{../assets/logoits.png}%
+  \includegraphics[height=1cm]{Perulangan/logoits.png}%
 }
 
 \begin{document}
