--- a/Algoritma dan Pemrograman Komputer 1/Variabel dan Operator/Variabel dan Operator.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Variabel dan Operator/Variabel dan Operator.tex
@@ -45,11 +45,11 @@
 
 % Logo untuk title page
 \titlegraphic{%
-  \includegraphics[height=0.9cm]{../assets/logoprovikom.jpg}%
+  \includegraphics[height=0.9cm]{Variabel dan Operator/logoprovikom.jpg}%
   \hspace{0.5em}%
-  \includegraphics[height=0.9cm]{../assets/logomatematika.png}%
+  \includegraphics[height=0.9cm]{Variabel dan Operator/logomatematika.png}%
   \hspace{0.5em}%
-  \includegraphics[height=1cm]{../assets/logoits.png}%
+  \includegraphics[height=1cm]{Variabel dan Operator/logoits.png}%
 }
 
 \begin{document}
