--- a/Algoritma dan Pemrograman Komputer 1/Dasar Pemrograman Java/Dasar Pemrograman Java.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Dasar Pemrograman Java/Dasar Pemrograman Java.tex
@@ -47,11 +47,11 @@
 
 % Logo untuk title page
 \titlegraphic{%
-  \includegraphics[height=0.9cm]{../assets/logoprovikom.jpg}%
+  \includegraphics[height=0.9cm]{Dasar Pemrograman Java/logoprovikom.jpg}%
   \hspace{0.5em}%
-  \includegraphics[height=0.9cm]{../assets/logomatematika.png}%
+  \includegraphics[height=0.9cm]{Dasar Pemrograman Java/logomatematika.png}%
   \hspace{0.5em}%
-  \includegraphics[height=1cm]{../assets/logoits.png}%
+  \includegraphics[height=1cm]{Dasar Pemrograman Java/logoits.png}%
 }
 
 \begin{document}
