--- a/Algoritma dan Pemrograman Komputer 1/Input dan GUI Sederhana/Input dan GUI Sederhana.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Input dan GUI Sederhana/Input dan GUI Sederhana.tex
@@ -51,11 +51,11 @@
 
 % Logo untuk title page
 \titlegraphic{%
-  \includegraphics[height=0.9cm]{../assets/logoprovikom.jpg}%
+  \includegraphics[height=0.9cm]{Input dan GUI Sederhana/logoprovikom.jpg}%
   \hspace{0.5em}%
-  \includegraphics[height=0.9cm]{../assets/logomatematika.png}%
+  \includegraphics[height=0.9cm]{Input dan GUI Sederhana/logomatematika.png}%
   \hspace{0.5em}%
-  \includegraphics[height=1cm]{../assets/logoits.png}%
+  \includegraphics[height=1cm]{Input dan GUI Sederhana/logoits.png}%
 }
 
 \begin{document}
