--- a/Algoritma dan Pemrograman Komputer 1/Pernyataan Percabangan/Pernyataan Percabangan.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Pernyataan Percabangan/Pernyataan Percabangan.tex
@@ -47,6 +47,17 @@
 \date{October 28, 2025}
 \institute{Departemen Matematika \\ Fakultas Sains dan Analitika Data \\ Institut Teknologi Sepuluh Nopember}
 
+
+% Logo untuk title page
+\titlegraphic{%
+  \includegraphics[height=0.9cm]{Pernyataan Percabangan/logoprovikom.jpg}%
+  \hspace{0.5em}%
+  \includegraphics[height=0.9cm]{Pernyataan Percabangan/logomatematika.png}%
+  \hspace{0.5em}%
+  \includegraphics[height=1cm]{Pernyataan Percabangan/logoits.png}%
+}
+
+
 \begin{document}
 
 % Cover
