--- a/Algoritma dan Pemrograman Komputer 1/Struktur Kontrol 2/Struktur Kontrol 2.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Struktur Kontrol 2/Struktur Kontrol 2.tex
@@ -52,11 +52,11 @@
 
 % Logo untuk title page
 \titlegraphic{%
-  \includegraphics[height=0.9cm]{../assets/logoprovikom.jpg}%
+  \includegraphics[height=0.9cm]{Struktur Kontrol 2/logoprovikom.jpg}%
   \hspace{0.5em}%
-  \includegraphics[height=0.9cm]{../assets/logomatematika.png}%
+  \includegraphics[height=0.9cm]{Struktur Kontrol 2/logomatematika.png}%
   \hspace{0.5em}%
-  \includegraphics[height=1cm]{../assets/logoits.png}%
+  \includegraphics[height=1cm]{Struktur Kontrol 2/logoits.png}%
 }
 
 \begin{document}
