--- a/Algoritma dan Pemrograman Komputer 1/Dasar Pemrograman Java/Dasar Pemrograman Java.tex
+++ b/Algoritma dan Pemrograman Komputer 1/Dasar Pemrograman Java/Dasar Pemrograman Java.tex
@@ -40,7 +40,7 @@
 \addtobeamertemplate{block begin}{}{\vspace{3px}}
 
 % Info presentasi
-\title{Pengantar Algoritma dan Pemrograman}
+\title{Algoritma dan Pemrograman Komputer 1}
 \subtitle{Bab 2: Dasar Pemrograman Java}
 \author{Aslam Pandu Tasminto -- 5002241025 \\ M. Ma'ruf Qomaruddin Kafi -- 5002241095}
 \institute{Departemen Matematika \\ Fakultas Sains dan Analitika Data \\ Institut Teknologi Sepuluh Nopember}
